--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "mongoose": "^5.9.23",
-    "nodemon": "^1.3.3"
+    "nodemon": "^1.3.3",
+    "validator": "^13.7.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
