--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "mongoose": "^5.9.23",
-    "nodemon": "^1.3.3",
+    "nodemon": "^2.0.18",
     "validator": "^13.7.0"
   },
   "scripts": {
